{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 81,
  "lineage": "60b7a243-13c8-2256-0853-503de341671b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0549319f536a61770",
            "domain": "vpc",
            "id": "eipalloc-0a5d76e545207b96f",
            "instance": "i-0644aa90a15747c21",
            "network_border_group": "us-west-2",
            "network_interface": "eni-091bb5ca930f5a8e5",
            "private_dns": "ip-10-10-1-14.us-west-2.compute.internal",
            "private_ip": "10.10.1.14",
            "public_dns": "ec2-44-224-238-62.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.238.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-057f007d661b4d09d",
            "domain": "vpc",
            "id": "eipalloc-050fd7ab9c796f900",
            "instance": "i-094553efbe54fae0e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04946da1134fd55f9",
            "private_dns": "ip-10-10-1-161.us-west-2.compute.internal",
            "private_ip": "10.10.1.161",
            "public_dns": "ec2-54-212-143-129.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.143.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-0644aa90a15747c21",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0644aa90a15747c21",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091bb5ca930f5a8e5",
            "private_dns": "ip-10-10-1-14.us-west-2.compute.internal",
            "private_ip": "10.10.1.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0713aa1b2eb721c63",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ac4f8d70bdd8a59",
            "tags": {
              "Name": "instance-http-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01116a2d8621b5ae4",
              "sg-09efb17d2d9913811"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0928f4202481dfdf6",
            "arn": "arn:aws:ec2:us-west-2:271868875615:instance/i-094553efbe54fae0e",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094553efbe54fae0e",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04946da1134fd55f9",
            "private_dns": "ip-10-10-1-161.us-west-2.compute.internal",
            "private_ip": "10.10.1.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1a9ae6035809583",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ac4f8d70bdd8a59",
            "tags": {
              "Name": "instance-http-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01116a2d8621b5ae4",
              "sg-09efb17d2d9913811"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:internet-gateway/igw-03c2749205ade40d9",
            "id": "igw-03c2749205ade40d9",
            "owner_id": "271868875615",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/http-lb/91c4340be3a35298",
            "arn_suffix": "net/http-lb/91c4340be3a35298",
            "dns_name": "http-lb-91c4340be3a35298.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/http-lb/91c4340be3a35298",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "http-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09ac4f8d70bdd8a59"
              }
            ],
            "subnets": [
              "subnet-09ac4f8d70bdd8a59"
            ],
            "tags": {
              "Name": "http-lb"
            },
            "vpc_id": "vpc-0f1864c84ab49484e",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:listener/net/http-lb/91c4340be3a35298/2f2fe5f1629f8391",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:listener/net/http-lb/91c4340be3a35298/2f2fe5f1629f8391",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:loadbalancer/net/http-lb/91c4340be3a35298",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_lb.http",
            "aws_lb_target_group.http",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53",
            "arn_suffix": "targetgroup/http-lb-target-group/8d5d214cbea3dd53",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53",
            "lambda_multi_value_headers_enabled": false,
            "name": "http-lb-target-group",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "http-lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53-20210216072617175600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53",
            "target_id": "i-0644aa90a15747c21"
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.http",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53-20210216072617104900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:271868875615:targetgroup/http-lb-target-group/8d5d214cbea3dd53",
            "target_id": "i-094553efbe54fae0e"
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_lb_target_group.http",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00713ae16d7e7c9dc",
            "owner_id": "271868875615",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c2749205ade40d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0721f0e112f94c4a9",
            "route_table_id": "rtb-00713ae16d7e7c9dc",
            "subnet_id": "subnet-09ac4f8d70bdd8a59"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:security-group/sg-09efb17d2d9913811",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09efb17d2d9913811",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": "",
            "owner_id": "271868875615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:security-group/sg-0a65f0c83f4f1b547",
            "description": "Allow db incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a65f0c83f4f1b547",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "271868875615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:security-group/sg-01116a2d8621b5ae4",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01116a2d8621b5ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "271868875615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:subnet/subnet-09ac4f8d70bdd8a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-09ac4f8d70bdd8a59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271868875615",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-0f1864c84ab49484e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:271868875615:vpc/vpc-0f1864c84ab49484e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-096934a3893217d2f",
            "default_route_table_id": "rtb-030aff01985cffed5",
            "default_security_group_id": "sg-0d84e24d2d3a31823",
            "dhcp_options_id": "dopt-43ccc621",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f1864c84ab49484e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-030aff01985cffed5",
            "owner_id": "271868875615",
            "tags": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}